src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@keyframes enter {
    0% {
        opacity: 0;
        transform: translateY(5px);
    }
    100% {
        opacity: 1;
        transform: translateY(0);
    }
}

.about-img-left {
    float: left;
}

.about-img-right {
    float: right;
}

.program a {
    word-break: break-word;
}

#programs {
    animation: enter .8s forwards;
    padding-top: 15px;
    padding-right: 35px;
    max-width: 1600px;
    align-self: center;
    color: #261e2d;
}

.page {
    animation: enter .8s forwards;
    padding-top: 15px;
    padding-right: 35px;
    max-width: 900px;
    align-self: center;
    color: #261e2d;
}

@media (max-width: 900px) {
    .page {
        padding-right: 0;
    }
}

#program-container {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
}

#see-info {
    display: none;
}


@media (max-width: 1200px) {
    #program-container {
        display: block;
    }

    #see-info {
        display: block;
    }
}

#content, nav, footer {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", ui-system, sans-serif;
}

#content {
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 10px;
}

h1 {
    font-size: 2.8em;
}

h2 {
    font-size: 1.9em;
}

h3 {
    font-size: 1.5em;
}

h1, h2, h3 {
    font-weight: 550;
    margin-top: 10px;
    margin-bottom: 10px;
}

#landing-img {
    display: none;
    float: right;
    height: 300px;
}

#home p {
    font-size: 1.25em;
}

#about a, #programs a, .location, .event-description a, #headline a {
    color: rgb(170, 68, 255);
}

#programs .waisi-button {
    color: white;
}

#programs .closed {
    background-image: linear-gradient(to top right, #7d618c, #4a3b4c);
}

#about a:hover, #programs a:hover, .event-description a:hover {
    text-decoration: underline;
}

#programs .waisi-button:hover {
    text-decoration: none;
}

#buttons {
    margin: 35px 0;
}

.waisi-button {
    padding: 17px;
    font-weight: 600;
    color: white;
    background-position: 0;
    background-image: linear-gradient(to top right, #8B5CF6, #D946EF);
    border-radius: 12px;
    transition: all 0.3s ease;
}

.waisi-button:hover {
    opacity: 80%;
}

@keyframes gradientshift {
    0% { background-position: 0 50%; }
    50% { background-position: 100% 50%; }
    100% { background-position: 0 50%; }
}

.text-gradient {
    background-image: linear-gradient(-45deg, #8B5CF6, #D946EF);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-size: 400%;
    background-position: 0;
    animation: gradientshift 6s ease infinite;
}

